# PDF-Lib-Converter

./: .gitignore  CMakeLists.txt  PROJECT_SUMMARY.md  README.md  build.sh  convert_ps_to_pdf  convert_ps_to_pdf.cpp  direct_convert  direct_convert.cpp  pdf_gs  pdf_gs_wrapper  prompt.md  ps2pdf  read.md  test_simple.ps
examples/: CMakeLists.txt  basic_pdf_processor.cpp  c_api_example.cpp
include/: pdf_lib.h  pdf_lib_c.h
src/api/: c_api.cpp
src/cli/: main.cpp  simple_main.cpp
src/core/: command_parser.cpp  command_parser.h  device.h  device_manager.cpp  device_manager.h  error_handler.cpp  error_handler.h  pdf_engine.cpp  pdf_engine.h  pdf_generator.cpp  pdf_generator.h  pdf_processor.cpp  pdf_processor.h  postscript_interpreter.cpp  postscript_interpreter.h  postscript_parser.cpp  postscript_parser.h  resource_manager.cpp  resource_manager.h  utils_impl.cpp
src/devices/: mswin_printer_device.cpp  mswin_printer_device.h  pdf_write_device.cpp  pdf_write_device.h  postscript_processor.cpp  postscript_processor.h
src/parsers/: command_line_parser.cpp  command_line_parser.h
src/platform/windows/: platform_utils.cpp  platform_utils.h  windows_printer.cpp.disabled
src/utils/: file_utils.cpp  file_utils.h  memory_utils.cpp  memory_utils.h  string_utils.cpp  string_utils.h
test_files/: test.ps  test1.ps
tests/: CMakeLists.txt  test_pdf_processor.cpp
